--- a/Trash_Collector_Project/Trash_Collector_Project.csproj
+++ b/Trash_Collector_Project/Trash_Collector_Project.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\201903071341402_MigrateNewForeignKeyPath.Designer.cs">
       <DependentUpon>201903071341402_MigrateNewForeignKeyPath.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903071613531_NewPickupDayProperty.cs" />
+    <Compile Include="Migrations\201903071613531_NewPickupDayProperty.Designer.cs">
+      <DependentUpon>201903071613531_NewPickupDayProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -307,6 +311,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201903071341402_MigrateNewForeignKeyPath.resx">
       <DependentUpon>201903071341402_MigrateNewForeignKeyPath.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903071613531_NewPickupDayProperty.resx">
+      <DependentUpon>201903071613531_NewPickupDayProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
