Made DateTime data types to be nullable so that an exception would not be thrown.

--- a/Trash_Collector_Project/Trash_Collector_Project.csproj
+++ b/Trash_Collector_Project/Trash_Collector_Project.csproj
@@ -203,6 +203,10 @@
     <Compile Include="Migrations\201903072128278_DisplayNameAdditions.Designer.cs">
       <DependentUpon>201903072128278_DisplayNameAdditions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903072202494_DateTimeTypesNullable.cs" />
+    <Compile Include="Migrations\201903072202494_DateTimeTypesNullable.Designer.cs">
+      <DependentUpon>201903072202494_DateTimeTypesNullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -335,6 +339,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903072128278_DisplayNameAdditions.resx">
       <DependentUpon>201903072128278_DisplayNameAdditions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903072202494_DateTimeTypesNullable.resx">
+      <DependentUpon>201903072202494_DateTimeTypesNullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
