--- a/Trash_Collector_Project/Trash_Collector_Project.csproj
+++ b/Trash_Collector_Project/Trash_Collector_Project.csproj
@@ -324,6 +324,7 @@
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Customer\Create.cshtml" />
     <Content Include="Views\Customer\Edit.cshtml" />
+    <Content Include="Views\Customer\Suspend.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
