--- a/Trash_Collector_Project/Trash_Collector_Project.csproj
+++ b/Trash_Collector_Project/Trash_Collector_Project.csproj
@@ -329,6 +329,7 @@
     <Content Include="Views\Customer\Details.cshtml" />
     <Content Include="Views\Employee\Details.cshtml" />
     <Content Include="Views\Employee\Index.cshtml" />
+    <Content Include="Views\Employee\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
